--- a/Desktop/tobsc-client/src/app/app-main/login/login.component.html
+++ b/Desktop/tobsc-client/src/app/app-main/login/login.component.html
@@ -8,6 +8,10 @@
         <input #pass type="password" name="password" ngModel  required>
         <p id="res"></p>
         <button (click)="login()" type="submit">התחבר</button>
+        <h2>או</h2>
+        <button id="Facebook" (click)="socialSignIn('facebook')">Sign in with Facebook</button>
+        <button id="Google" (click)="socialSignIn('google')">Signin in with Google+</button>  
+
 
     </form>
 
