--- a/Desktop/tobsc-client/src/app/app-main/login/login.component.html
+++ b/Desktop/tobsc-client/src/app/app-main/login/login.component.html
@@ -7,10 +7,10 @@
         <h2>סיסמא</h2>
         <input #pass type="password" name="password" ngModel  required>
         <p id="res"></p>
-        <button (click)="login()" type="submit">התחבר</button>
-        <h2>או</h2>
-        <button id="Facebook" (click)="socialSignIn('facebook')">Sign in with Facebook</button>
-        <button id="Google" (click)="socialSignIn('google')">Signin in with Google+</button>  
+        <button id="sighnIn" (click)="login()" type="submit">התחבר</button>
+        <h2 id="or">או</h2>
+        <button id="Facebook" (click)="socialSignIn('facebook')">Facebook</button>
+        <button id="Google" (click)="socialSignIn('google')">Google+</button>  
 
 
     </form>
