--- a/Desktop/tobsc-client/src/app/app-main/forgot-password/forgot-password.component.css
+++ b/Desktop/tobsc-client/src/app/app-main/forgot-password/forgot-password.component.css
@@ -1,30 +1,31 @@
-#auth{
-  height: 350px;
+#forgot{
+  height: 380px;
+  padding: 15px;
   width: 350px;
-  border:2px solid #d3d3d3;
-  background-color: #f9f9f9;
   display: block;
   margin: 0 auto;
+  border:2px solid #d3d3d3;
+  background-color: #f9f9f9;
+  text-align: right;
   margin-top: 50px; 
- 
+  left: 500px;
 }
 
 h2{
   font-size: 20px;
   font-family: arial;
-  margin-left: 20px;
+
 }
 
 form{
   float: right;
-  padding-right: 70px;
-  padding-top: 30px;
+  padding-right: 10px;
+  padding-top: 10px;
 }
 
 input {
-  padding: 12px 20px;
-  margin: 8px 0;
-  display:block;
+  padding: 7px 10px;
+  width: 280px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
@@ -32,19 +33,27 @@ input {
 ::placeholder{
   text-align: right;
 }
-
 button{
-    height: 35px;
-    width: 85px;
+    height: 55px;
+    width: 280px;
+    float: right;
+    position: relative;
     border-radius: 5px;
     border: 2px solid #4f4d4f;
-    float:right;
     background-color:#676767;
     color:#ffffff;
     font-size: 17px;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 button:hover{
     background-color:#585858;
+}
+
+#sendPassword{
+  width: 280px;
+  height: 35px;
+  display: block;
+  margin-top: 50px;
 }
