--- a/Desktop/tobsc-client/src/app/app-main/login/login.component.css
+++ b/Desktop/tobsc-client/src/app/app-main/login/login.component.css
@@ -1,11 +1,12 @@
 #login{
+  height: 380px;
   padding: 15px;
   width: 350px;
+  display: block;
+  margin: 0 auto;
   border:2px solid #d3d3d3;
   background-color: #f9f9f9;
-  float: right;
   text-align: right;
-  position:absolute;
   margin-top: 50px; 
   left: 500px;
 }
@@ -19,7 +20,7 @@ h2{
 form{
   float: right;
   padding-right: 10px;
-  padding-top: 30px;
+  padding-top: 10px;
 }
 
 input {
@@ -50,21 +51,25 @@ button{
 button:hover{
     background-color:#585858;
 }
-
-#sighnIn{
+#forgot{
+  text-align: left;
+  color: blue;
+  cursor: pointer;    
+ }
+#signIn{
   width: 280px;
   height: 35px;
   display: block;
-  margin-bottom: 20px;
+  margin-bottom:0px;
 }
 #or{
-  top: 220px;
-  right: 150px;
-  display: block;
-  position: absolute;
+  text-align: center;
+  margin-left: 30px;
+  margin-bottom:40px;
 }
 
 #Facebook{
+  margin-top:-35px;
   background-color: #3B5998;
   color: white;
 }
