--- a/Desktop/tobsc-client/src/app/app-header/app-header.component.html
+++ b/Desktop/tobsc-client/src/app/app-header/app-header.component.html
@@ -1,8 +1,25 @@
 <meta charset="utf-8">
-
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ --><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <div id="header">
-
-    <a routerLink="/aboutUs"><img src="../../assets/images/logo.png"></a>
+    <div id="myNav">
+        <ul>
+          <li routerLink="mySubEng"><img src="../../assets/images/hat.png"><span id="subEng">הנדסות</span></li>
+          <hr>
+          <li routerLink="myProfile"><span class="glyphicon glyphicon-user"></span> פרופיל</li>
+          <hr>
+          <li routerLink="myFavorite"><span class="glyphicon glyphicon-home"></span> מוסדות</li>
+        </ul>
+    </div>
+    <div id="hamburger">
+          <button>
+            <img src="../../assets/images/menu.png">
+          </button>
+    </div>
+    <a routerLink="/enter"><img src="../../assets/images/logo.png"></a>
     <div *ngIf = "!user" id="buttons">
         <button routerLink="/login">התחבר</button>
         <button routerLink="/auth">הירשם</button>
@@ -10,4 +27,3 @@
     <div *ngIf = "user" id="nameLogin">{{user.firstName}}</div>
     <a class="logout" *ngIf = "user" (click)="logOut()">התנתק</a>
 </div>
-
