--- a/Desktop/tobsc-client/src/app/app-main/forgot-password/forgot-password.component.css
+++ b/Desktop/tobsc-client/src/app/app-main/forgot-password/forgot-password.component.css
@@ -24,6 +24,7 @@ form{
 }
 
 input {
+  direction: ltr;
   padding: 7px 10px;
   width: 280px;
   border: 1px solid #ccc;
@@ -33,6 +34,7 @@ input {
 ::placeholder{
   text-align: right;
 }
+
 button{
     height: 55px;
     width: 280px;
