--- a/Desktop/tobsc-client/src/app/app-main/auth/auth.component.css
+++ b/Desktop/tobsc-client/src/app/app-main/auth/auth.component.css
@@ -5,20 +5,20 @@
   background-color: #f9f9f9;
   display: block;
   margin: 0 auto;
-  margin-top: 50px; 
- 
+  margin-top: 50px;  
 }
 
 h2{
   font-size: 20px;
   font-family: arial;
-  margin-left: 20px;
+  margin-left: 5%;
+  margin-top: -7%;
 }
 
 form{
   float: right;
-  padding-right: 70px;
-  padding-top: 30px;
+  padding-right: 5%;
+  padding-top: 5%;
 }
 
 input {
@@ -27,10 +27,30 @@ input {
   display:block;
   border: 1px solid #ccc;
   border-radius: 4px;
+  width: 75%;
 }
 
+.email{
+  direction: ltr;
+}
 ::placeholder{
   text-align: right;
+}
+
+form+form{
+  float: left;
+  padding-left:3%;
+  margin-top: -65%;
+}
+
+select{
+  width: 150px;
+  padding-bottom: 5%;
+  padding-top: 0%;
+  direction: rtl;
+  margin: 20px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px; 
 }
 
 button{
@@ -43,6 +63,8 @@ button{
     color:#ffffff;
     font-size: 17px;
     cursor: pointer;
+    margin-top:1%;
+    margin-right:40%;
 }
 
 button:hover{
