--- a/Desktop/tobsc-client/src/app/app-main/chat-bot/chat-bot.component.css
+++ b/Desktop/tobsc-client/src/app/app-main/chat-bot/chat-bot.component.css
@@ -1,11 +1,18 @@
 #chat{
-  background: #e5e5ea;
-  width: 600px;
-  height: 300px;
-  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0 auto;
-  padding: 10px;
-  overflow: auto;
+   width:700px;
+    height:385px;
+    margin: 0 auto;
+    margin-bottom: -5%;
+    border-radius: 5px;
+    overflow: auto;
+    text-align: right;
+    background: #e5e5ea;
+    font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+img{
+  height: 40px;
+  width: 40px;
 }
 
 #chat p{
@@ -15,10 +22,47 @@
   border-radius: 1em;
   padding: 0.5em 1em;
   width: 200px;
-  margin-left: 120px;
-  margin-top: 10px;
-  margin-bottom: 10px;
- 
+  margin-top: 1%;
+  margin-right: 20%;
+  margin-bottom:-2%; 
+}
+
+.arrow-left {
+  width: 0; 
+  height: 0; 
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent; 
+  border-right:10px solid #84b4a7; 
+  margin-right: 105%;
+  margin-top: -10%;
+}
+
+.arrow-right {
+  width: 0; 
+  height: 0; 
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 10px solid #fff;
+  margin-right:-11%;
+  margin-top: -10%;
+}
+
+.psychImg{
+ float: right;
+ margin-right:-40%;
+ margin-top: -35%; 
+}
+
+.psychImg1{
+ float: right;
+ margin-right:-30%;
+ margin-top: -35%; 
+}
+
+.userImg{
+  float: left;
+  margin-left:-25%; 
+  margin-top: -35%;
 }
 
 .odd{
@@ -28,10 +72,10 @@
   margin: 0 0 0.5em;
   border-radius: 1em;
   padding: 0.5em 1em;
-  min-width: 200px;
-  float: right;
-  margin-bottom:20px;
-  margin-right: 120px
+  width: 200px;
+  float: left;
+  margin-left:18%;
+  margin-top: -12%;
 }
 
 .even{
@@ -41,46 +85,122 @@
   border-radius: 1em;
   padding: 0.5em 1em;
   width: 200px;
-   margin-left: 120px;
-   margin-top:55px;
+  margin-top: 3%;
+  margin-right: 20%;
+  margin-bottom:12%; 
 }
 
-.first{
-  display: none;
+.messagesResult{
+  direction: rtl;
+  background-color:#ffffff;
+  margin: 0 0 0.5em;
+  border-radius: 1em;
+  padding: 0.5em 1em;
+  width: 200px;
+  margin-top: -3%;
+  margin-right: 20%;
+  margin-bottom:12%; 
 }
 
-.input{
+.mySubEng{
+  height: 40px;
+  width: 150px;
+  border-radius: 5px;
+  border: 2px solid #7d331f;
+  background-color:#cf411b;
+  color:#ffffff;
+  font-size: 17px;
+  cursor: pointer;
+  outline:none;
+  float: left;
+  margin-left: 22%;
+  margin-top: -10%;
+}
+
+#answer{
   background: #e5e5ea;
-  width: 600px;
-  height: 100px;
+  width: 700px;
+  height: 50px;
   font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0 auto;
-  padding: 10px;
-  border-top: 2px solid #d3d3d3;
+  border-top: 1px solid grey;
+  padding: 20px;
+  padding-right: 200px;
 }
 
-.inputtext{
-  direction: rtl;
-  width: 200px;
-  padding: 5px 20px;
-  margin: 8px 0;
-  display:block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin-top: 10px;
-  margin-left: 270px;
-}
-
-button{
+ .select button{
+  position: relative;
+  float: right;
+  width: 100%;
+  margin-top: -10px;
   height: 28px;
   width: 80px;
   border-radius: 5px;
   border: 2px solid #4f4d4f;
-  background-color:#676767;
+  background-color:#8fe600;
+  border-color:#8fe600;
   color:#ffffff;
   font-size: 17px;
   cursor: pointer;
-  margin-left: 510px;
-  margin-top:-35px;
-  position: absolute;
+  margin :0 auto;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.select span{
+  margin-top: 3px;
+}
+
+.first > button{
+  background-color:#8b9dc3;
+  border-color: #8b9dc3;
+}
+
+.last > button{
+   background-color:#e56567;
+   border-color:#e56567;
+}
+
+.back{
+    float: right;
+    height: 40px;
+    width: 80px;
+    border-radius: 5px;
+    border: 2px solid #7d331f;
+    background-color:#cf411b;
+    color:#ffffff;
+    font-size: 17px;
+    cursor: pointer;
+    outline:none;
+    margin-top:2%;
+    margin-right:7%;
+}
+
+.back:hover{
+        background-color:#b13615;
+    }
+
+@media (max-width: 677px){
+        
+  .first >button{
+    display: block;
+    margin-right: -170px;
+  }
+  
+  .last >button{
+    margin-right: -180px;
+  }
+
+  .back{
+        float: none;
+        display: block;
+        margin: 0 auto;
+  }  
+
+  .mySubEng{
+      float: none;
+      display: block;
+      margin:0 auto;
+  } 
+
 }
