--- a/Desktop/tobsc-client/src/app/app-main/colleges/colleges.component.css
+++ b/Desktop/tobsc-client/src/app/app-main/colleges/colleges.component.css
@@ -1,6 +1,17 @@
 #filter{
-    margin-left: 150px;
-    margin-top: 50px; 
+    margin-left:10%;
+    margin-top: 5%; 
+}
+
+
+.probability{
+  padding-left: 3.5%;
+  width: 25%;
+  height: 12%;
+  background-color: #f0f0f0;
+  margin-right: 70%;
+  border: solid 2px #ffc107;
+  border-radius: 45%;
 }
 
 agm-map {
@@ -9,93 +20,210 @@ agm-map {
 }
 
 #getMap{
-    margin-left: 100px;
-    width: 75px;
-    height: 30px;
-    color: #ffffff;
-    text-align: center;
+  width: 8%;
+  height: 50%;
+  color: #ffffff;
+  text-align: center;
+  float: right;
+  margin-right: 5%;
+   margin-top: 1%;
 }
 
 select{
     display: inline-block;
-    width: 120px;
+    width: 11%;
     direction: rtl;
+}
+
+#userLocation{
+  float: right;
+  margin-right: 19%;
+  width: 10%;
+  margin-top: 0.1%;
+  background-color: #ffff;
+  border-color: #6c6e70;
+  color: #6c6e70;
 }
 
 .btn{
     background: #84b4a7;
-    margin-right: 10px;
+    margin-right: 10%;
     border: #84b4a7;
     width: 50px;
     height: 30px;
 }
 
-#institutes{
+/*#institutes{
     margin: auto;
     padding-top: 30px;
-    padding-right:170px;
+    padding-right:300px;
+}*/
+
+#grade{
+    width: 7%;
+    display: inline-block;
+
 }
 
+#Extend{
+  width: 10%;
+  background-color: #ffc107;
+  margin-right: 0;
+  margin-top: 0;
+  margin-left: 85%;
+}
 
-.frame{
-    width: 300px;
-    height: 160px;
+#ExtendedFilter{
+    margin-left: 7%;
+}
+
+#ExtendedFilter select{
+    width: 13%;
+}
+
+#frame{
+    cursor: pointer;
+    width:610px;
+    height:270px;
+    margin: 0 auto;
+   /* width: 610px;*/
+   /* height: 160px;*/
     border: 1px solid black;
     border-radius: 5px;
-    float: right;    
+   /* float: right;    
     padding: 7px;  
     margin-left: 20px;
     margin-top: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 10px;*/
 }
 
-.pic{
-    float: right;
-    width: 130px;
-    height: 140px;
+.info{
+   /* padding: 5px;*/
+   /* float: right;*/
+    /*position: relative;*/
+/*    margin-left: 200px;*/
+    text-align: right;
 }
 
-
-.pic img{
-    width: 100%;
-    height: 100%; 
-}
-
-.logo{
-    float: right;
-    width: 100px;
+.info img{
+    padding-bottom: 5px;
+    width: 280px;
     height: 50px;
-    border: 1px solid #cecece;   
-    border-radius: 5px; 
-    margin-right: 30px; 
-    margin-top:10px; 
-    padding: 2px;   
 }
 
-.logo img{
-    width: 100%;
-    height: 100%; 
+.info p{
+   margin-right: 10%;
 }
 
-.name{
-    font-size: 16px;
-    text-align: center;
+.info span{
+    font-weight: bold;
+}
+/*.favorite{
+    float: left;
+    width: 150px;
+    height: 150px;
+   /* border:1px solid grey; */
+   /* margin-top: -160px;*/
+/*}*/
+.favorite span{
+    float: left;
+    margin-top: -125px;
+    margin-left: 10%;
+    /*padding-top: -80px;
+    padding-left: 50px;*/
+    font-size: 30px;
+   /* margin-left:10%;*/
+    cursor: pointer;
+    color: #e94937;
 }
 
-.modal-body{
- text-align: right;
+.rate{
+    width: 200px;
+    float:left;
+    margin-left: 35%;
+     margin-top: 0%;
+   /* padding: 10px;
+}*/
 }
-
-.modal-body p{
- margin-top:-3px;
- font-size: 12px;
- text-align: right;
+.rate span{
+    /*float: left;*/
+    font-size: 20px;
+    cursor: pointer;
+   
 }
 
 .modal-title{
-  margin-left: 195px;
+  margin-right: 195px;
 }
 
-.modal-body h4{
-    text-align: center;
+.close{
+    float: right;
+    margin-right: -280px;
+}
+
+/*.rating input:before{
+    background: #ccc;
+        content: "\f005";
+    font-family: "Font Awesome Free"; 
+}*/
+
+/*.rating label{
+    display: block;
+    cursor: pointer;
+    width: 50px;
+
+}*/
+/*.rating label:before{
+    content: "\f005";
+    font-family: "Font Awesome Free"; 
+    position: relative;
+    display: block;
+    font-size: 20px;
+    color: #101010;
+}*/
+/*.stars-outer {
+  position: relative;
+  display: inline-block;
+}
+
+.stars-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 0;
+}
+
+.stars-outer::before {
+  content: "\f005 \f005 \f005 \f005 \f005";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #ccc;
+}
+
+.stars-inner::before {
+  content: "\f005 \f005 \f005 \f005 \f005";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #f8ce0b;
+}*/
+
+.back{
+    float: right;
+    height: 40px;
+    width: 80px;
+    border-radius: 5px;
+    border: 2px solid #7d331f;
+    background-color:#cf411b;
+    color:#ffffff;
+    font-size: 17px;
+    cursor: pointer;
+    outline:none;
+    margin-top:2%;
+    margin-right:7%;
+}
+
+.back:hover{
+        background-color:#b13615;
 }
