--- a/Desktop/tobsc-client/src/app/app-main/departments/departments.component.css
+++ b/Desktop/tobsc-client/src/app/app-main/departments/departments.component.css
@@ -1,47 +1,63 @@
-#departments{
-    margin: auto;
-    padding-top: 80px;
-    padding-right:170px;
-}
-
-.frame{
-    width: 300px;
-    height: 160px;
-    border: 1px solid black;
-    border-radius: 5px;
-    float: right;    
-    padding: 7px;  
-    margin-left: 20px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-}
-.logo{
-    float: right;
-    width: 180px;
-    height: 140px;
-}
-
-.logo img{
-    width: 100%;
-    height: 100%; 
-}
-
-p{
-    margin-top: 35px;
-    font-size: 18px;
+.name{
     text-align: center;
+    font-size: 20px;
 }
 
-.modal-title{
-  margin-left: 195px;
+img{
+    margin: 0 auto;
+    display: block;
+    width: 298px;
 }
 
-.modal-body{
- text-align: right;
+#mainLayout3{
+    background: #f9f9f9;
+    position: relative;
+    padding-left:1%;
+    padding-top:5%;
 }
 
-.modal-body p{
- margin-top:-3px;
- font-size: 12px;
- text-align: right;
+#mainLayout3 > *{
+    width:300px;
+    height:200px;
+    border: 1px solid #020741;
+    background:#ffffff;
+    display:inline-block;  
+    margin-left:2%;
+    margin-bottom:10%;
+    cursor:  pointer;   
+}
+
+
+button{
+    /*float: right;*/
+    height: 40px;
+    width: 80px;
+    border-radius: 5px;
+    border: 2px solid #7d331f;
+    background-color:#cf411b;
+    color:#ffffff;
+    font-size: 17px;
+    cursor: pointer;
+    outline:none;
+    margin-top:2%;
+    margin:0 auto;
+    display: block;
+}
+
+button:hover{
+        background-color:#b13615;
+    }
+
+#wrapperLayout3{
+    max-width:1000px;
+    width: 100%;
+    margin:0 auto;
+}
+
+@media (max-width: 634px) {
+    #mainLayout3 > *{
+        margin:0 auto;
+        display: block;
+        margin-bottom:10%; 
+    }
 }
