--- a/Desktop/tobsc-client/src/app/app-main/enter/enter.component.css
+++ b/Desktop/tobsc-client/src/app/app-main/enter/enter.component.css
@@ -1,59 +1,136 @@
-#startChat{
-    float: right;
+.bubble{
+    background-color: #F2F2F2;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    vertical-align: top;
+}
+
+.bubble::before {
+    background-color: #F2F2F2;
+    content: "\00a0";
+    display: block;
+    height: 16px;
+    position: absolute;
+    top: 11px;
+    transform:             rotate( 29deg ) skew( -35deg );
+        -moz-transform:    rotate( 29deg ) skew( -35deg );
+        -ms-transform:     rotate( 29deg ) skew( -35deg );
+        -o-transform:      rotate( 29deg ) skew( -35deg );
+        -webkit-transform: rotate( 29deg ) skew( -35deg );
+    width:  20px;
+}
+
+.me {
     text-align: right;
-    margin-top: 20px;
+  width: 30%;
+  margin-right: 13%;
+  float: right;
 }
 
-p{
+
+.me::before {
+    box-shadow: -2px 2px 2px 0 rgba( 178, 178, 178, .4 );
+    left: -9px;           
+}
+
+.w3-container p{
+    cursor: pointer;
+}
+
+.w3-container{
+    width: 50%;
+}
+
+#sectionLeft{
+    width:100%;
+    margin-left: 5%;
+    padding-top: 5%;
+}
+#sectionLeft > div{
+    width: 80%;
+}
+
+#sectionLeft[_ngcontent-c4] > div[_ngcontent-c4]{
+    width: 100%;
+
+}
+
+#sectionMiddle, #sectionRight{
+    background-color: #ffff;
+    padding-top: 5%;
+}
+
+#sectionMiddle img{
+    width:20%;
+    margin-left: 2%;
+    margin-top: -2%;
+}
+
+.panel-heading{
+  text-align: right;
+}
+.panel-body{
+  text-align: center;
+}
+
+p[_ngcontent-c4] {
+    text-align: right;
+    font-size: 18px;
+    padding-top: 2%;
+    /* margin-top: 5%; */
+}
+
+h3{
     text-align: center;
-    float: right;
-    margin-left: 50px;
-    position: absolute;
-    font-size: 15px; 
+}
+#data[_ngcontent-c4]{
+    margin-bottom: 5%;
+}
+#data[_ngcontent-c4][_ngcontent-c4]{
+    float: left;
+    width: 12%;
+}
+#data,#data[_ngcontent-c4][_ngcontent-c4][_ngcontent-c4]{
+    cursor: pointer;
+    border-radius: 50px; 
+   margin-left: 3%;
+    border-radius: 50px;
+    width: 25%;
+/*    margin-left: 20%;
+    padding-top: 2%;
+    height: 144px;*/
 }
 
-img{
-    margin-right: 100px;
-    margin-top: 40px;
-
-}
-
-#startChat button{
-    margin-left: -500px;
-    margin-top: 10px;
-    position: absolute;
-    width: 200px;
-    background: #84b4a7;
-    font-weight: bold;
-    border: 2px solid #60a18f;
-}
-
-#startChat button:hover{
-    background-color:#60a18f;    
-}
-/*#info{
-    padding-left: 80px;
-    text-align: center;
-    margin-top: 100px;
+/*#sectionRight > div{
+    margin-top: 30%;
 }*/
-
 button{
-    height: 40px;
-    width: 110px;
+    width: 20%;
     border-radius: 5px;
     border: 2px solid #4f4d4f;
-    background-color:#676767;
-    color:#ffffff;
-    font-size: 18px;
+    background-color: #676767;
+    color: #FFFFFF;
+    font-size: 24px;
     cursor: pointer;
+    margin-left: 35%;
+    margin-top: -20%;
+    margin-bottom: 7%;
+    margin-right: 45%;
 }
 
 button:hover{
     background-color:#585858;
 }
 
-
-#info button{
-    margin-top: 70px;
-    margin-left: 5px;
+@media (max-width: 634px) {
+   
+ .me{
+    width: 60%;
+    margin-top: 5%;
+    margin-right: 5%; 
+ }   
+   
 }
