--- a/Desktop/tobsc-client/src/app/app-main/enter/enter.component.html
+++ b/Desktop/tobsc-client/src/app/app-main/enter/enter.component.html
@@ -1,24 +1,33 @@
-<meta charset="utf-8">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+  <div class="w3-row-padding">
 
-<div id="startChat">
-    <p>
-        .על מנת שנוכל להתאים לך את תחומי ההנדסה
-         נצטרך להכיר אותך ואת תחומי העניין שלך<br>
-        ...לחץ על "התחל צא'ט" ונצא לדרך
-    </p>
-    <img src="../../../assets/images/chat.png">
-    <button routerLink="/chat-bot">התחל צ'אט</button>
-</div>
-<button routerLink="/colleges">מוסדות לימוד</button>
-<button routerLink="/departments">תחומי הנדסה</button>
+    <div class="w1-third w1-container w1-margin-bottom" id="sectionMiddle">
+      <div class="w2-container">
+        <div class="panel panel-info" style="float: right;width: 33%;">
+          <div class="panel-heading">לפי נתוני הפרופיל שלך, אולי יעניין אותך ללמוד:</div>
+      <div class="panel-body" (click)="openDepartment(i)" *ngFor="let i of threeSubEngRecommended">{{i}}</div>
+          </div>
 
+          <img src="../../../assets/images/avatar-psychologist (1).png">
+         <div class="bubble me">שמי אילנה ואני פסיכולוגית תעסוקתית <br>
+על מנת שאוכל להתאים לך את תחומי ההנדסה, עליי להכיר אותך ואת תחומי העניין שלך.
+ לחץ על "התחל צ'אט" ונצא לדרך...</div>
 
-<!-- <div id="info">
-    <p>
-        כאן תוכל למצוא מידע אודות תחומי ההנדסה השונים<br>
-    </p>
-    <button>תחומי הנדסה</button>
-    <button>מוסדות לימוד</button>
-    <button>תנאי שכר</button>
+         <button routerLink="/chat-bot">התחל צ'אט</button>
+      </div>
+    </div>
+        <div class="w3-third w3-container w3-margin-bottom" id="sectionLeft">
+      <div class="w1-container">
+        <img src="../../../assets/images/מוסדות.png"  id="data" routerLink="/colleges">
+        <img src="../../../assets/images/הנדסה.png" id="data" routerLink="/departments">
+        <img src="../../../assets/images/מלגות.png" id="data" routerLink="/scholarships">
+      </div>
+    </div>
+  </div>
+  
 
-</div> -->
