--- a/Desktop/tobsc-client/src/app/app-main/expert/expert.component.css
+++ b/Desktop/tobsc-client/src/app/app-main/expert/expert.component.css
@@ -1,61 +1,33 @@
-#container{
-  width: 100%;
+#contener{
+    margin-left: 25%;
+    margin-top: 8%;
 }
 
-.box{
-  width:1270px;
-  padding:20px;
-  background-color:#fff;
-  border:1px solid #ccc;
-  border-radius:5px;
-  margin-top:25px;
-  box-sizing:border-box;
+section{
+    width: 15%;
+    height: 160px;
+    border: 2px solid #ccc;
+    border-radius: 20px;
+    display: inline-block;
+    margin-left: 5%;
+    cursor: pointer;
 }
 
-.btn{
-  background-color: #84b4a7;
-  border-color: #84b4a7;
-  margin-top: 5px;
+span{
+    margin-left: 40px;
+    margin-top: 40px;
+    font-size: 65px;
+    color:#878787;
 }
 
-#add{
-  font-size: 35px;
+p{
+    color: #878787;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
 }
 
-table{
-  direction: rtl;
-}
-
-th{
-  text-align: center;
-}
-
-td{
-  text-align: right;
-}
-
-.glyphicon{
-  font-size: 20px;
-  cursor:pointer;
-}
-
-input{
-  text-align: center;
-  margin-bottom: 5px;
-  width: 100%;
-}
-
-label{
-  float: right;
-}
-
-.form-container {
-    display:block;
-    width:100%;
-    padding:2em;
-    margin: 2em auto;
-}
-
-.modal-title{
-  margin-left: 195px;
+img{
+    margin-left: 30%;
+    margin-top: 25%;
 }
